--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,14 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="green_primary">#33691e</color>
+    <color name="green_dark">#003d00</color>
+    <color name="green_light">#629749</color>
+
+    <color name="orange_primary">#ff6f00</color>
+    <color name="orange_light">#ffa040</color>
+    <color name="orange_dark">#c43e00</color>
+
+    <color name="grey_background">#fff3e0</color>
 </resources>
